src/test/ui/lifetime-errors/ex2c-push-inference-variable.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/ex2c-push-inference-variable.rs:16:13
   |
LL |     let z = Ref { data: y.data };
   |             ^^^

error: unsatisfied lifetime constraints
  --> $DIR/ex2c-push-inference-variable.rs:17:5
   |
LL | fn foo<'a, 'b, 'c>(x: &'a mut Vec<Ref<'b, i32>>, y: Ref<'c, i32>) {
   |            --  -- lifetime `'c` defined here
   |            |
   |            lifetime `'b` defined here
LL |     let z = Ref { data: y.data };
LL |     x.push(z); //~ ERROR lifetime mismatch
   |     ^^^^^^^^^ argument requires that `'c` must outlive `'b`

error: aborting due to previous error

